RESOLVED FIXED201121
Displayed datalist dropdown is out of sync with datalist options elements after DOM update
https://bugs.webkit.org/show_bug.cgi?id=201121
Summary Displayed datalist dropdown is out of sync with datalist options elements aft...
shrpne
Reported 2019-08-24 17:01:49 PDT
Steps to reproduce: - Focus input element with associated datalist - Datalist dropdown is displayed with correct options - Replace old options HTML elements with some new options - Dropdown stay the same with old options, no new options are displayed - Dropdown updates to correct values only after new input focus event Demo https://jsfiddle.net/dkmcz16f/ Tested in the Safari 12 and Safari TP
Attachments
Behaviour with PR on OS X (1.66 MB, video/quicktime)
2024-02-09 11:41 PST, Rob Buis
no flags
Behaviour with PR on iOS (3.36 MB, video/quicktime)
2024-02-09 11:42 PST, Rob Buis
no flags
Radar WebKit Bug Importer
Comment 1 2019-08-25 17:56:14 PDT
andreyvlktn
Comment 2 2021-05-10 15:23:30 PDT
Any updates on this? Chrome and Firefox handle it successfully
Aaron Barker
Comment 3 2022-07-12 15:10:13 PDT
Ran into this one today as well. This basically makes it so a datalist can't be used for an AJAX driven autocomplete/typeahead as the dynamically updated values are always a re-display behind.
Chris Harrelson
Comment 4 2024-01-16 19:20:17 PST
Another example: https://codepen.io/1cg/pen/rNqKqwg?editors=1000 Type one character into the text box. It should render an overlay menu, and then change it shortly thereafter to another menu with more items. In Chrome and Firefox, it will update the overlay; in Safari it will not.
Rob Buis
Comment 5 2024-01-31 13:41:43 PST
Rob Buis
Comment 6 2024-02-09 11:41:47 PST
Created attachment 469799 [details] Behaviour with PR on OS X Behaviour with PR on OS X
Rob Buis
Comment 7 2024-02-09 11:42:21 PST
Created attachment 469800 [details] Behaviour with PR on iOS Behaviour with PR on iOS.
EWS
Comment 8 2024-02-13 22:44:16 PST
Committed 274608@main (ba02cc6aade5): <https://commits.webkit.org/274608@main> Reviewed commits have been landed. Closing PR #23616 and removing active labels.
Ryosuke Niwa
Comment 9 2024-02-22 17:32:45 PST
This introduced a security bug.
Note You need to log in before you can comment on or make changes to this bug.