Cherry-pick 274608@main (ba02cc6aade5). https://bugs.webkit.org/show_bug.cgi?id=201121

Displayed datalist dropdown is out of sync with datalist options elements after DOM update
    https://bugs.webkit.org/show_bug.cgi?id=201121

    Reviewed by Aditya Keerthi.

    Adding datalist dropdown items by dynamically inserting options to the datalist on keydown/input change
    was not taking effect right away. To fix this, detect datalist DOM changes through HTMLDataListElement::childrenChanged
    and notify the corresponding input. This will eventually land in TextFieldInputType::dataListMayHaveChanged which
    now ends with trying to display the suggestions if the input is focused.

    Note that here a new DataListSuggestionActivationType value DataListMayHaveChanged is added to distinguish from
    current usages (text changed, indicator/control clicked).

    * LayoutTests/fast/forms/datalist/datalist-textinput-dynamically-add-options-expected.txt: Added.
    * LayoutTests/fast/forms/datalist/datalist-textinput-dynamically-add-options-on-keydown-expected.txt: Added.
    * LayoutTests/fast/forms/datalist/datalist-textinput-dynamically-add-options-on-keydown.html: Added.
    * LayoutTests/fast/forms/datalist/datalist-textinput-dynamically-add-options.html: Added.
    * Source/WebCore/html/DataListSuggestionInformation.h:
    * Source/WebCore/html/HTMLDataListElement.cpp:
    (WebCore::HTMLDataListElement::childrenChanged):
    * Source/WebCore/html/HTMLDataListElement.h:
    * Source/WebCore/html/TextFieldInputType.cpp:
    (WebCore::TextFieldInputType::dataListMayHaveChanged):
    (WebCore::TextFieldInputType::displaySuggestions):
    * Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
    * Source/WebKit/UIProcess/ios/WebDataListSuggestionsDropdownIOS.mm:
    (-[WKDataListSuggestionsDropdown _displayWithActivationType:]):

    Canonical link: https://commits.webkit.org/274608@main

Canonical link: https://commits.webkit.org/274313.179@webkitglib/2.44